initialize script.js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <form role="search" id="search-form">
                 <label for="search-input" id="search-label">Search for Pokémon Name or ID:</label>
-                <input type="text" id="search-input">
+                <input type="text" id="search-input" required>
                 <button type="button" id="search-button">Search</button>
             </form>
             <div class="output">   
@@ -32,7 +32,7 @@
                         <span id="height">Height: 22</span>
                     </div>
                     <div class="image-container">
-                        <img src="" alt="pokemon">
+                        <img id="sprite" src="" alt="pokemon">
                     </div>
                     <div id="types">
                         <span class="type fire">FIRE</span>
