--- a/index.html
+++ b/index.html
@@ -24,19 +24,16 @@
             <div class="output">   
                 <div class="pokemon-display">
                     <div class="name-id">
-                        <span id="pokemon-name">charizard</span>
-                        <span id="pokemon-id">#123</span>
+                        <span id="pokemon-name"></span>
+                        <span id="pokemon-id"></span>
                     </div>
                     <div class="size">
-                        <span id="weight">Weight: 323</span>
-                        <span id="height">Height: 22</span>
+                        <span id="weight"></span>
+                        <span id="height"></span>
                     </div>
                     <div class="image-container">
-                        <img id="sprite" src="" alt="pokemon">
                     </div>
                     <div id="types">
-                        <span class="type fire">FIRE</span>
-                        <span class="type flying">FLYING</span>
                     </div>
                 </div>
                 <div class="pokemon-stats">
@@ -47,27 +44,27 @@
                         </tr>
                         <tr>
                             <td>HP:</td>
-                            <td id="hp">100</td>
+                            <td id="hp"></td>
                         </tr>
                         <tr>
                             <td>Attack:</td>
-                            <td id="attack">100</td>
+                            <td id="attack"></td>
                         </tr>
                         <tr>
                             <td>Defense:</td>
-                            <td id="defense">100</td>
+                            <td id="defense"></td>
                         </tr>
                         <tr>
                             <td>Sp. Attack:</td>
-                            <td id="special-attack">100</td>
+                            <td id="special-attack"></td>
                         </tr>
                         <tr>
                             <td>Sp. Defense:</td>
-                            <td id="special-defense">100</td>
+                            <td id="special-defense"></td>
                         </tr>
                         <tr>
                             <td>Speed:</td>
-                            <td id="speed">100</td>
+                            <td id="speed"></td>
                         </tr>
                     </table>
                 </div>
