--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <p>This page is created by <a href="https://github.com/ToanThanhTu" target="_blank">Thanh Toan Tu</a></p>
+        <p>14th June 2024 | <a href="https://github.com/ToanThanhTu/pokemon-search-app" target="_blank">Source Code</a></p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
